test/resource/invalid/close_params.ftl
<#list foo>

</#list id="2">
